@@ -12,6 +12,7 @@ VDR 1.7.29+
 	Fixed error getting german languages file.
 	Get server ip from flash
 	Bugfix, removed delayed play (in case of error) when you already start to play a recording
+	Save old position before jump forward. In case of ongoing recording and jump position isn't recorded yet you don't start replay at 0
 
 0.26	Fix for [undefined] in (search)timer menu when there are no (search)timers on server
 	Changed Plugin check, only check if digit 1,2,3 from server ip & box ip are the same.
